css/style.css
/* ... */
.interview_carousel_seven{background:url(../img/interview/mac_chrome_screen-shot_test_without_logo.jpg)center center;background-size:cover;}
.interview_carousel_eight{background:url(../img/interview/xan_my_sea_of_fresh_water_opacity.jpg)center center;background-size:cover;}
.interview_carousel_nine{background:url(../img/interview/xan_trip_ocean_opacity.jpg)center center;background-size:cover;}
.interview_carousel_eleven{background:url(../img/interview/xan_360_opacity_three.jpg)center;background-size:cover;}
.interview_carousel_twelve{background: url(../img/interview/msq_sea_freshwater_.jpg)no-repeat center;background-size:cover;}
.interview_carousel_thirteen{background: url(../img/interview/xan_interview_tv.jpg)no-repeat center;background-size:cover;}	
.interview_carousel_fourteen{background: url(../img/interview/xan_florianopolis_championship_background_test.jpg)no-repeat center;background-size:cover;}
.interview_carousel_fifteen{background: url(../img/interview/xan_exhibition_gallery_two_test.jpg)no-repeat center;background-size:cover;}
.interview_carousel_sixteen{background: url(../img/interview/xan_msq_two.jpg)no-repeat center;background-size:cover;}
.blrsa, .tstc, .sl, .crd, .ap, .ls{border-radius:2px;white-space:nowrap;background-color: rgba(106, 30, 66,.8);color:rgb(255,255,255);padding:1px 3px 0px 3px;all .3s ease-in-out}
.blrsa:hover, .kpla:hover, .tstc:hover, .sl:hover, .crd:hover, .ap:hover, .ls:hover{transition:all .3s ease-in-out;text-decoration: underline;}
.kpla{white-space: nowrap;color:rgb(255,255,255);padding:0px 2px 0px;background:rgba(255, 102, 0,.8);all .3s ease-in-out;}
.tstc{background: rgba(43, 41, 41,.8);all .3s ease-in-out;}
.sl{background: rgba(246, 43, 45,.8);all .3s ease-in-out;}
.crd{background: rgba(48, 195, 224,.8);all .3s ease-in-out;}
.tstc:hover{background: rgb(43, 41, 41);all .3s ease-in-out;}
.sl:hover{background: rgb(246, 43, 45);all .3s ease-in-out;}
.crd:hover{background: rgb(48, 195, 224);all .3s ease-in-out;}
.blrsa:hover{background: rgb(106, 30, 66);all .3s ease-in-out;}
.kpla:hover{background:rgb(255, 102, 0);all .3s ease-in-out;}
.ap{background:rgba(12, 10, 15,.8);all .3s ease-in-out;}
.ap:hover{background:rgb(12, 10, 15);}
.ls{background:rgba(0, 173, 238,.8);all .3s ease-in-out;}
.ls:hover{background:rgb(0, 173, 238);}

a:hover, a:focus{text-decoration:none;}
.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{background-color:transparent;}
.carousel-control.left{background-image:none;background:url(../img/icons/arrow_left_more_little.png)center no-repeat;}
.carousel-control.right{background-image:none;background:url(../img/icons/arrow_right_more_little.png)center no-repeat;}
.carousel-control{opacity:.6;transition:opacity .3s;}
.navbar-toggle .icon-bar{width:25px;height:2px;border-radius:0;}
@media (max-width:750px){.navbar-inner li:hover, .navbar-inner li:active, .navbar-inner li:focus, .navbar-inner li:visited{background:rgb(243, 156, 18);opacity:.8}
}
div#begin{position:relative;top:-499px;}
.carousel-control{bottom:700px;}
h3.mobile_one{position:relative;top:298px;color:#fff;left:-295px;}
.item h3{text-shadow:1px 1px 1px rgb(0,0,0);}
p.interview_mbl{margin-top:-115px;color:#fff;width:50%;float:right;text-shadow: 1px 1px 1px rgb(0,0,0);}
h2.header_interview{position:relative;font-family:'honey_scriptlight';background:rgba(255,255,255,.7);top:-173px;text-align:center;height:66px;font-size:5vw;text-transform:capitalize;font-weight:400;letter-spacing:0.02em;}
a.link{position:relative;left:14px;top:-6px;/*opacity:.6*/;transition:opacity .3s;z-index:2;}
a.link:hover{border-bottom:none;opacity:1;}
a.fresh_water{text-decoration: underline;transition:all .3s ease-in-out; color: rgb(255,255,255);white-space: nowrap;}
a.fresh_water:hover{color: rgb(52,152,219);transition:all .3s ease-in-out;}
.carousel-caption{z-index:2;}
.color{background:rgba(44,62,80,.46);position:relative;top:-92px;right:-68px;border-radius:3px 3px 0 0;}
p.background{background:rgba(44,62,80,.46);color:#fff;height:auto;width:50%;float:right;position:relative;top:-176px;right:-68px;padding:0 4px 2px 4px;text-align:left;border-radius:0 0 3px 3px;  text-shadow: 1px 1px 1px rgb(0,0,0);}
.date{color:rgb(243, 156, 18);font-weight:700;}
p.background strong{color:rgb(243, 156, 18);}
.website_background{color:rgb(226,86,28);text-shadow:none;font-weight:700;}
.com{color:#52b043;}
.client-quote-mark.quote_xan{right:-129px;color:rgb(243, 156, 18);top:-173px;}
img.logo_footer{position:relative;bottom:6px;border-radius:3px;transition:all .4s ease-in-out;}
img.logo_footer:hover{opacity:.8;transition:opacity 300ms, ease-in, 500ms;}
@media (max-width:750px){img.logo_footer{top:18px;}}
img.logo_footer_one{position:relative;bottom:5px;left:3px;}
img.camera{float:right;position:relative;right:114px!important;bottom:3px;}
p.photographer{float:right;position:relative;right:-288px;bottom:101px;font-size:14px;color:#fff;text-shadow:1px 1px 1px #000;}
@media (max-width:750px){p.photographer{right:-238px;bottom:-329px;}
}
p.photographer_one{position:relative;float:right;left:772px;bottom:-62px;font-size:14px;text-shadow:1px 1px 1px #000;}
.camera_one{position:relative;bottom:3.6px;right:2px;}
b{position:relative;right:-4px;top:4px;}
/* ... */

